--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   </head>
   <body>
     <div class="gift-container">
-        <div class="shadow"></div>
+      <div class="shadow"></div>
       <div class="gift-box">
         <div class="click"></div>
       </div>
+      <img class="pony" src="pony.png" alt="pony" />
     </div>
   </body>
   <script src="script.js"></script>
