--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       </div>
       <img class="pony" src="pony.png" alt="pony" />
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
+    <script src="script.js"></script>
   </body>
-  <script src="script.js"></script>
 </html>
