--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       </div>
       <img class="pony" src="pony.png" alt="pony" />
     </div>
+    <audio id="horse-sound" src="horse.mp3"></audio>
+    <audio id="confetti-sound" src="confetti.mp3"></audio>
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
     <script src="script.js"></script>
   </body>
