--- a/index.html
+++ b/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Pivvy's Pift</title>
+    <title>Pivvy's Pebsite</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-
+    <link rel="icon" type="image/x-icon" href="gift/favicon.ico" />
   </head>
   <body>
-    <div class="gift-container">
-      <div class="shadow"></div>
-      <div class="gift-box">
-        <div class="click"></div>
-      </div>
-      <img class="pony" src="pony.png" alt="pony" />
+    <h1>Welcome to Pivvy's Pebsite!!!</h1>
+    <p>Click one of the links below!</p>
+    <div class="links">
+        <a href="gift/gift.html">Pivvy's Pift</a>
+        <a href="sheep/sheep.html">Pounting Peep</a>
     </div>
-    <audio id="horse-sound" src="horse.mp3"></audio>
-    <audio id="confetti-sound" src="confetti.mp3"></audio>
-    <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
-    <script src="script.js"></script>
   </body>
 </html>
