Added home page

--- a/gift/gift.html
+++ b/gift/gift.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="gift.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
   </head>
   <body>
     <div class="back">
@@ -16,10 +16,10 @@
       <div class="gift-box">
         <div class="click"></div>
       </div>
-      <img class="pony" src="pony.png" alt="pony" />
+      <img class="pony" src="../assets/pony.png" alt="pony" />
     </div>
-    <audio id="horse-sound" src="horse.mp3"></audio>
-    <audio id="confetti-sound" src="confetti.mp3"></audio>
+    <audio id="horse-sound" src="../assets/horse.mp3"></audio>
+    <audio id="confetti-sound" src="../assets/confetti.mp3"></audio>
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
     <script src="gift.js"></script>
   </body>
