--- a/index.html
+++ b/index.html
@@ -1,18 +1,133 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Pivvy's Pebsite</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="gift/favicon.ico" />
-  </head>
-  <body>
-    <h1>Welcome to Pivvy's Pebsite!!!</h1>
-    <p>Click one of the links below!</p>
-    <div class="links">
-        <a href="gift/gift.html">Pivvy's Pift</a>
-        <a href="sheep/sheep.html">Pounting Peep</a>
+<html>
+
+<head>
+  <meta charset="utf-8" />
+  <title>Pivvy Pebsite</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Alatsi&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <div id="text">
+    <h1>Pivvy's Pebsite</h1>
+    <p>click a box to see some cool pivvy projects</p>
+  </div>
+  <div id="container">
+    <div class="rect">
+      <img src="./assets/loading.gif" />
+      <div class="innerContent">
+        <ion-icon name="arrow-back-circle-outline"></ion-icon>
+        <div class="card">
+          <h1>Work in Progress</h1>
+          <ul>
+            <li>Please be patient, this project is still to come!!!</li>
+          </ul>
+          <a href="https://youtu.be/8ukYO_iZh4o" target="_blank">Meanwhile, enjoy this!</a>
+        </div>
+      </div>
     </div>
-  </body>
+    <div class="rect">
+      <img src="./assets/gift.jpeg" />
+      <div class="innerContent">
+        <ion-icon name="arrow-back-circle-outline"></ion-icon>
+        <div class="card">
+          <h1>Pivv'y Pift</h1>
+          <ul>
+            <li>A small gift for nivvy</li>
+            <li>Click the lid of the box to open</li>
+            <li>Click the box to close</li>
+            <li>Make sure your volume is up</li>
+          </ul>
+          <a href="./gift/gift.html">Open Gift</a>
+        </div>
+      </div>
+    </div>
+    <div class="rect">
+      <img src="./assets/loading.gif" />
+      <div class="innerContent">
+        <ion-icon name="arrow-back-circle-outline"></ion-icon>
+        <div class="card">
+          <h1>Work in Progress</h1>
+          <ul>
+            <li>Please be patient, this project is still to come!!!</li>
+          </ul>
+          <a href="https://youtu.be/8ukYO_iZh4o" target="_blank">Meanwhile, enjoy this!</a>
+        </div>
+      </div>
+    </div>
+    <div class="rect">
+      <img src="./assets/sheep.jpeg" />
+      <div class="innerContent">
+        <ion-icon name="arrow-back-circle-outline"></ion-icon>
+        <div class="card">
+          <h1>Pounting Peep</h1>
+          <ul>
+            <li>If you are having trouble sleeping give this project a try</li>
+            <li>Count the sheeps til you fall asleeps</li>
+            <li>Keep a look out, some sheeps do some pretty cool jumps</li>
+          </ul>
+          <a href="./sheep/sheep.html">Count Sheep</a>
+        </div>
+      </div>
+    </div>
+    <div class="rect">
+      <img src="./assets/loading.gif" />
+      <div class="innerContent">
+        <ion-icon name="arrow-back-circle-outline"></ion-icon>
+        <div class="card">
+          <h1>Work in Progress</h1>
+          <ul>
+            <li>Please be patient, this project is still to come!!!</li>
+          </ul>
+          <a href="https://youtu.be/8ukYO_iZh4o" target="_blank">Meanwhile, enjoy this!</a>
+        </div>
+      </div>
+    </div>
+    <div class="rect">
+      <img src="./assets/loading.gif" />
+      <div class="innerContent">
+        <ion-icon name="arrow-back-circle-outline"></ion-icon>
+        <div class="card">
+          <h1>Work in Progress</h1>
+          <ul>
+            <li>Please be patient, this project is still to come!!!</li>
+          </ul>
+          <a href="https://youtu.be/8ukYO_iZh4o" target="_blank">Meanwhile, enjoy this!</a>
+        </div>
+      </div>
+    </div>
+    <div class="rect">
+      <img src="./assets/loading.gif" />
+      <div class="innerContent">
+        <ion-icon name="arrow-back-circle-outline"></ion-icon>
+        <div class="card">
+          <h1>Work in Progress</h1>
+          <ul>
+            <li>Please be patient, this project is still to come!!!</li>
+          </ul>
+          <a href="https://youtu.be/8ukYO_iZh4o" target="_blank">Meanwhile, enjoy this!</a>
+        </div>
+      </div>
+    </div>
+    <div class="rect">
+      <img src="./assets/loading.gif" />
+      <div class="innerContent">
+        <ion-icon name="arrow-back-circle-outline"></ion-icon>
+        <div class="card">
+          <h1>Work in Progress</h1>
+          <ul>
+            <li>Please be patient, this project is still to come!!!</li>
+          </ul>
+          <a href="https://youtu.be/8ukYO_iZh4o" target="_blank">Meanwhile, enjoy this!</a>
+        </div>
+      </div>
+    </div>
+    <script src="script.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+</body>
+
 </html>
