Minor spelling fix

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="innerContent">
         <ion-icon name="arrow-back-circle-outline"></ion-icon>
         <div class="card">
-          <h1>Pivv'y Pift</h1>
+          <h1>Pivvy's Pift</h1>
           <ul>
             <li>A small gift for nivvy</li>
             <li>Click the lid of the box to open</li>
