--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li>Click the box to close</li>
             <li>Make sure your volume is up</li>
           </ul>
-          <a href="./gift/gift.html">Open Gift</a>
+          <a href="./gift/gift.html">Click to Open Gift</a>
         </div>
       </div>
     </div>
@@ -69,7 +69,7 @@
             <li>Count the sheeps til you fall asleeps</li>
             <li>Keep a look out, some sheeps do some pretty cool jumps</li>
           </ul>
-          <a href="./sheep/sheep.html">Count Sheep</a>
+          <a href="./sheep/sheep.html">Click to Count Sheep</a>
         </div>
       </div>
     </div>
