Added lullaby to counting sheep

--- a/sheep/sheep.html
+++ b/sheep/sheep.html
@@ -22,6 +22,19 @@
         <div class="fence"></div>
       </div>
     </div>
+    <div class="sound-buttons">
+      <ion-icon id="mute" name="volume-mute-outline"></ion-icon>
+      <ion-icon id="unmute" name="volume-high-outline"></ion-icon>
+      <audio src="../assets/lullaby.mp3"></audio>
+    </div>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <script src="sheep.js"></script>
   </body>
 </html>
