--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <p>click a box to see some cool pivvy projects</p>
   </div>
   <div id="container">
+<!------------------------------------------------ CARD 1 ----------------------------------------------------------------->
     <div class="rect">
       <img src="./assets/loading.gif" />
       <div class="innerContent">
@@ -29,6 +30,7 @@
         </div>
       </div>
     </div>
+<!------------------------------------------------ PIVVY'S PIFT ----------------------------------------------------------------->
     <div class="rect">
       <img src="./assets/gift.jpeg" />
       <div class="innerContent">
@@ -45,6 +47,7 @@
         </div>
       </div>
     </div>
+<!------------------------------------------------ CARD 3 ----------------------------------------------------------------->
     <div class="rect">
       <img src="./assets/loading.gif" />
       <div class="innerContent">
@@ -58,6 +61,7 @@
         </div>
       </div>
     </div>
+<!------------------------------------------------ POUNTING PEEP ----------------------------------------------------------------->
     <div class="rect">
       <img src="./assets/sheep.jpeg" />
       <div class="innerContent">
@@ -68,11 +72,13 @@
             <li>If you are having trouble sleeping give this project a try</li>
             <li>Count the sheeps til you fall asleeps</li>
             <li>Keep a look out, some sheeps do some pretty cool jumps</li>
+            <li>If counting sheeps no working, try <a href="https://youtu.be/jpNGodLOdIw" target="_blank">this</a>!</li>
           </ul>
           <a href="./sheep/sheep.html">Click to Count Sheep</a>
         </div>
       </div>
     </div>
+<!------------------------------------------------ CARD 5 ----------------------------------------------------------------->
     <div class="rect">
       <img src="./assets/loading.gif" />
       <div class="innerContent">
@@ -86,6 +92,7 @@
         </div>
       </div>
     </div>
+<!------------------------------------------------ CARD 6 ----------------------------------------------------------------->
     <div class="rect">
       <img src="./assets/loading.gif" />
       <div class="innerContent">
@@ -99,6 +106,7 @@
         </div>
       </div>
     </div>
+<!------------------------------------------------ CARD 7 ----------------------------------------------------------------->
     <div class="rect">
       <img src="./assets/loading.gif" />
       <div class="innerContent">
@@ -112,6 +120,7 @@
         </div>
       </div>
     </div>
+<!------------------------------------------------ CARD 8 ----------------------------------------------------------------->
     <div class="rect">
       <img src="./assets/loading.gif" />
       <div class="innerContent">
