Linked puppet videos to old branch

--- a/index.html
+++ b/index.html
@@ -47,20 +47,25 @@
         </div>
       </div>
     </div>
-<!------------------------------------------------ CARD 3 ----------------------------------------------------------------->
-    <div class="rect">
-      <img src="./assets/loading.gif" />
-      <div class="innerContent">
-        <ion-icon name="arrow-back-circle-outline"></ion-icon>
-        <div class="card">
-          <h1>Work in Progress</h1>
-          <ul>
-            <li>Please be patient, this project is still to come!!!</li>
-          </ul>
-          <a href="https://youtu.be/8ukYO_iZh4o" target="_blank">Meanwhile, enjoy this!</a>
+<!------------------------------------------------ PUPPET PIDEOS ----------------------------------------------------------------->
+<div class="rect">
+  <img src="./assets/kermit.jpeg" />
+  <div class="innerContent">
+    <ion-icon name="arrow-back-circle-outline"></ion-icon>
+    <div class="card">
+      <h1>Puppet Pideos</h1>
+      <ul>
+        <li>Watch all the puppet videos here!</li>
+        <li>Featuring the adventures of Puppet Kyle and Puppet Nivvy as they:</li>
+        <div class="inner-list">
+          <li><a href="https://youtu.be/4kUaEZIMmds">Facetime each other at home</a></li>
+          <li><a href="https://youtu.be/-7HL9tXCTG8">Speak to a strange man at the Hamilton Gardens</a></li>
+          <li><a href="https://youtu.be/8ukYO_iZh4o" target="_blank">Live in glass box forever and ever and go lalalalalala!!!</a></li>
         </div>
-      </div>
+      </ul>       
     </div>
+  </div>
+</div>
 <!------------------------------------------------ POUNTING PEEP ----------------------------------------------------------------->
     <div class="rect">
       <img src="./assets/sheep.jpeg" />
