Added _blank to target puppet links

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <li>Watch all the puppet videos here!</li>
         <li>Featuring the adventures of Puppet Kyle and Puppet Nivvy as they:</li>
         <div class="inner-list">
-          <li><a href="https://youtu.be/4kUaEZIMmds">Facetime each other at home</a></li>
-          <li><a href="https://youtu.be/-7HL9tXCTG8">Speak to a strange man at the Hamilton Gardens</a></li>
+          <li><a href="https://youtu.be/4kUaEZIMmds" target="_blank">Facetime each other at home</a></li>
+          <li><a href="https://youtu.be/-7HL9tXCTG8" target="_blank">Speak to a strange man at the Hamilton Gardens</a></li>
           <li><a href="https://youtu.be/8ukYO_iZh4o" target="_blank">Live in glass box forever and ever and go lalalalalala!!!</a></li>
         </div>
       </ul>       
