Added art gallery to homepage

--- a/index.html
+++ b/index.html
@@ -98,19 +98,22 @@
       </div>
     </div>
 <!------------------------------------------------ CARD 6 ----------------------------------------------------------------->
-    <div class="rect">
-      <img src="./assets/loading.gif" />
-      <div class="innerContent">
-        <ion-icon name="arrow-back-circle-outline"></ion-icon>
-        <div class="card">
-          <h1>Work in Progress</h1>
-          <ul>
-            <li>Please be patient, this project is still to come!!!</li>
-          </ul>
-          <a href="https://youtu.be/8ukYO_iZh4o" target="_blank">Meanwhile, enjoy this!</a>
-        </div>
-      </div>
+<div class="rect">
+  <img src="./assets/gallery/gallery.jpeg" />
+  <div class="innerContent">
+    <ion-icon name="arrow-back-circle-outline"></ion-icon>
+    <div class="card">
+      <h1>Part Pallery</h1>
+      <ul>
+        <li>Peruse the perfect painting</li>
+        <li>An exhibit of the finest artwork</li>
+        <li>Created by the renowned artist Pyle Prancis</li>
+        <li>Click the arrows to navigate</li>
+      </ul>
+      <a href="./gallery/gallery.html">Click here to Explore the Gallery</a>
     </div>
+  </div>
+</div>
 <!------------------------------------------------ CARD 7 ----------------------------------------------------------------->
     <div class="rect">
       <img src="./assets/loading.gif" />
@@ -126,19 +129,19 @@
       </div>
     </div>
 <!------------------------------------------------ CARD 8 ----------------------------------------------------------------->
-    <div class="rect">
-      <img src="./assets/loading.gif" />
-      <div class="innerContent">
-        <ion-icon name="arrow-back-circle-outline"></ion-icon>
-        <div class="card">
-          <h1>Work in Progress</h1>
-          <ul>
-            <li>Please be patient, this project is still to come!!!</li>
-          </ul>
-          <a href="https://youtu.be/8ukYO_iZh4o" target="_blank">Meanwhile, enjoy this!</a>
-        </div>
-      </div>
+<div class="rect">
+  <img src="./assets/loading.gif" />
+  <div class="innerContent">
+    <ion-icon name="arrow-back-circle-outline"></ion-icon>
+    <div class="card">
+      <h1>Work in Progress</h1>
+      <ul>
+        <li>Please be patient, this project is still to come!!!</li>
+      </ul>
+      <a href="https://youtu.be/8ukYO_iZh4o" target="_blank">Meanwhile, enjoy this!</a>
     </div>
+  </div>
+</div>
     <script src="script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
