--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -26,25 +26,25 @@
       <div class="item">
         <h1>Pyle and Priends</h1>
         <div class="frame">
-          <img src="../assets/gallery/canvas-2.png" alt="canvas-1" />
+          <img src="../assets/gallery/canvas-2.png" alt="canvas-2" />
         </div>
       </div>
       <div class="item">
         <h1>A Good Morning Message</h1>
         <div class="frame">
-          <img src="../assets/gallery/canvas-3.png" alt="canvas-1" />
+          <img src="../assets/gallery/canvas-3.png" alt="canvas-3" />
         </div>
       </div>
       <div class="item">
         <h1>The Dream</h1>
         <div class="frame">
-          <img src="../assets/gallery/canvas-4.png" alt="canvas-1" />
+          <img src="../assets/gallery/canvas-4.png" alt="canvas-4" />
         </div>
       </div>
       <div class="item">
-        <h1>Honk Honk</h1>
+        <h1>Welcome to Auckland</h1>
         <div class="frame">
-          <img src="../assets/gallery/canvas-1.png" alt="canvas-1" />
+          <img src="../assets/gallery/canvas-5.png" alt="canvas-5" />
         </div>
       </div>
       <button id="next">></button>
