Added fear fall painting

--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -24,6 +24,12 @@
         </div>
       </div>
       <div class="item">
+        <h1>The Fear Fall</h1>
+        <div class="frame">
+          <img src="../assets/gallery/canvas-6.jpeg" alt="canvas-6" />
+        </div>
+      </div>
+      <div class="item">
         <h1>Pyle and Priends</h1>
         <div class="frame">
           <img src="../assets/gallery/canvas-2.png" alt="canvas-2" />
