Added real photos

--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -7,6 +7,7 @@
     <title>Part Pallery</title>
     <link rel="stylesheet" href="gallery.css" />
   </head>
+
   <body>
     <div class="back">
       <a href="../index.html">← Back to Pivvy's Pebsite</a>
@@ -19,8 +20,18 @@
     <div class="slider">
       <div class="item">
         <h1>Rainbows End</h1>
-        <div class="frame">
-          <img src="../assets/gallery/canvas-1.png" alt="canvas-1" />
+        <div class="frame photo">
+          <img
+            src="../assets/gallery/canvas-1.png"
+            alt="canvas-1"
+            class="canvas"
+          />
+          <img
+            src="../assets/gallery/real-1.jpeg"
+            alt="real-1"
+            class="real"
+            style="display: none"
+          />
         </div>
       </div>
       <div class="item">
@@ -31,14 +42,34 @@
       </div>
       <div class="item">
         <h1>Pyle and Priends</h1>
-        <div class="frame">
-          <img src="../assets/gallery/canvas-2.png" alt="canvas-2" />
+        <div class="frame photo">
+          <img
+            src="../assets/gallery/canvas-2.png"
+            alt="canvas-2"
+            class="canvas"
+          />
+          <img
+            src="../assets/gallery/real-2.jpeg"
+            alt="real-2"
+            class="real"
+            style="display: none"
+          />
         </div>
       </div>
       <div class="item">
         <h1>A Good Morning Message</h1>
-        <div class="frame">
-          <img src="../assets/gallery/canvas-3.png" alt="canvas-3" />
+        <div class="frame photo">
+          <img
+            src="../assets/gallery/canvas-3.png"
+            alt="canvas-3"
+            class="canvas"
+          />
+          <img
+            src="../assets/gallery/real-3.jpeg"
+            alt="real-3"
+            class="real"
+            style="display: none"
+          />
         </div>
       </div>
       <div class="item">
@@ -51,6 +82,22 @@
         <h1>Welcome to Auckland</h1>
         <div class="frame">
           <img src="../assets/gallery/canvas-5.png" alt="canvas-5" />
+        </div>
+      </div>
+      <div class="item">
+        <h1>First Date</h1>
+        <div class="frame photo">
+          <img
+            src="../assets/gallery/canvas-7.png"
+            alt="canvas-7"
+            class="canvas"
+          />
+          <img
+            src="../assets/gallery/real-4.jpeg"
+            alt="real-4"
+            class="real"
+            style="display: none"
+          />
         </div>
       </div>
       <button id="next">></button>
