Added catch files and canvas 8

--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -100,6 +100,22 @@
           />
         </div>
       </div>
+      <div class="item">
+        <h1>Fred One More Time..</h1>
+        <div class="frame photo">
+          <img
+            src="../assets/gallery/canvas-8.png"
+            alt="canvas-7"
+            class="canvas"
+          />
+          <img
+            src="../assets/gallery/real-5.jpeg"
+            alt="real-4"
+            class="real"
+            style="display: none"
+          />
+        </div>
+      </div>
       <button id="next">></button>
       <button id="prev"><</button>
     </div>
