Altered title of canvas 8

--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -101,7 +101,7 @@
         </div>
       </div>
       <div class="item">
-        <h1>Fred One More Time..</h1>
+        <h1>I Found You Beautiful</h1>
         <div class="frame photo">
           <img
             src="../assets/gallery/canvas-8.png"
