--- a/catch/catch.html
+++ b/catch/catch.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <div id="container"></div>
+    <div class="container">
+      <div class="player"></div>
+    </div>
+    <script src="catch.js"></script>
   </body>
 </html>
