Added nivvy player to catch game

--- a/catch/catch.html
+++ b/catch/catch.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <div class="container">
-      <div class="player"></div>
+      <div class="player">
+        <img src="../assets/catch/player.png" alt="player">
+      </div>
     </div>
     <script src="catch.js"></script>
   </body>
