--- a/catch/catch.html
+++ b/catch/catch.html
@@ -12,6 +12,7 @@
         <img src="../assets/catch/player.png" alt="player">
       </div>
     </div>
+    <div class="device">test</div>
     <script src="catch.js"></script>
   </body>
 </html>
