--- a/catch/catch.html
+++ b/catch/catch.html
@@ -8,11 +8,22 @@
   </head>
   <body>
     <div class="container">
+      <div class="falling">1</div>
+      <div class="falling">2</div>
+      <div class="falling">3</div>
+      <div class="falling">4</div>
+
       <div class="player">
-        <img src="../assets/catch/player.png" alt="player">
+        <img src="../assets/catch/player.png" alt="player" />
       </div>
     </div>
-    <div class="device">test</div>
+    <div class="info">
+      <div class="score">
+        Score:
+        <div class="score-value">0</div>
+      </div>
+      <button onclick="startGame()">Start</button>
+    </div>
     <script src="catch.js"></script>
   </body>
 </html>
