--- a/catch/catch.html
+++ b/catch/catch.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div class="container">
-      <div class="falling">1</div>
-      <div class="falling">2</div>
-      <div class="falling">3</div>
-      <div class="falling">4</div>
+      <div class="falling"></div>
+      <div class="falling"></div>
+      <div class="falling"></div>
+      <div class="falling"></div>
 
       <div class="player">
         <img src="../assets/catch/player.png" alt="player" />
