Added to homepage

--- a/catch/catch.html
+++ b/catch/catch.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
+    <div class="back">
+      <a href="../index.html">← Back to Pivvy's Pebsite</a>
+    </div>
     <div class="container">
       <div class="falling"></div>
       <div class="falling"></div>
