--- a/index.html
+++ b/index.html
@@ -130,15 +130,19 @@
     </div>
 <!------------------------------------------------ CARD 8 ----------------------------------------------------------------->
 <div class="rect">
-  <img src="./assets/loading.gif" />
+  <img src="./assets/catch/catch.jpeg" />
   <div class="innerContent">
     <ion-icon name="arrow-back-circle-outline"></ion-icon>
     <div class="card">
-      <h1>Work in Progress</h1>
+      <h1>Pivvy Patch</h1>
       <ul>
-        <li>Please be patient, this project is still to come!!!</li>
+        <li>Use the mouse or your finger to move Pivvy</li>
+        <li>Click the button to start the game</li>
+        <li>Move Pivvy under the objects to catch them</li>
+        <li>Collect the falling objects to increase your score</li>
+        <li>If an object hits the floor the game is over!</li>
       </ul>
-      <a href="https://youtu.be/8ukYO_iZh4o" target="_blank">Meanwhile, enjoy this!</a>
+      <a href="./catch/catch.html">Click to Play Catch</a>
     </div>
   </div>
 </div>
