--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -105,14 +105,24 @@
         <div class="frame photo">
           <img
             src="../assets/gallery/canvas-8.png"
-            alt="canvas-7"
+            alt="canvas-8"
             class="canvas"
           />
           <img
             src="../assets/gallery/real-5.jpeg"
-            alt="real-4"
+            alt="real-5"
             class="real"
             style="display: none"
+          />
+        </div>
+      </div>
+      <div class="item">
+        <h1>Girl Dinner</h1>
+        <div class="frame">
+          <img
+            src="../assets/gallery/canvas-9.png"
+            alt="canvas-9"
+            class="canvas"
           />
         </div>
       </div>
