Added counter for gallery

--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -126,8 +126,27 @@
           />
         </div>
       </div>
+      <div class="item">
+        <h1>The Kraken to My Coke</h1>
+        <div class="frame photo">
+          <img
+            src="../assets/gallery/canvas-10.png"
+            alt="canvas-10"
+            class="canvas"
+          />
+          <img
+            src="../assets/gallery/real-6.jpeg"
+            alt="real-6"
+            class="real"
+            style="display: none"
+          />
+        </div>
+      </div>
       <button id="next">></button>
       <button id="prev"><</button>
+    </div>
+    <div class="number">
+      <span id="current"></span> / <span id="total"></span>
     </div>
 
     <script src="gallery.js"></script>
