Added link on home

--- a/index.html
+++ b/index.html
@@ -120,11 +120,13 @@
       <div class="innerContent">
         <ion-icon name="arrow-back-circle-outline"></ion-icon>
         <div class="card">
-          <h1>Work in Progress</h1>
+          <h1>Pivvy's Parden</h1>
           <ul>
-            <li>Please be patient, this project is still to come!!!</li>
+            <li>Welcome to your own virtual garden!</li>
+            <li>Click the screen to make the tulips grow</li>
+            <li>Listen to the calming sounds of nature</li>
           </ul>
-          <a href="https://youtu.be/8ukYO_iZh4o" target="_blank">Meanwhile, enjoy this!</a>
+          <a href="./garden/garden.html">Click to Visit the Garden</a>
         </div>
       </div>
     </div>
