Added garden png to home

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 </div>
 <!------------------------------------------------ CARD 7 ----------------------------------------------------------------->
     <div class="rect">
-      <img src="./assets/loading.gif" />
+      <img src="./assets/garden/garden.png" />
       <div class="innerContent">
         <ion-icon name="arrow-back-circle-outline"></ion-icon>
         <div class="card">
