Fred before in gallery

--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -142,6 +142,22 @@
           />
         </div>
       </div>
+      <div class="item">
+        <h1>Fred Before..</h1>
+        <div class="frame photo">
+          <img
+            src="../assets/gallery/canvas-11.png"
+            alt="canvas-11"
+            class="canvas"
+          />
+          <img
+            src="../assets/gallery/real-7.jpeg"
+            alt="real-7"
+            class="real"
+            style="display: none"
+          />
+        </div>
+      </div>
       <button id="next">></button>
       <button id="prev"><</button>
     </div>
