Added dino to home

--- a/dino/dino.html
+++ b/dino/dino.html
@@ -8,6 +8,9 @@
     <script src="dino.js"></script>
   </head>
   <body>
+    <div class="back">
+        <a href="../index.html">← Back to Pivvy's Pebsite</a>
+      </div>
     <h1>Chrome Dinosaur Game</h1>
     <canvas id="board"></canvas>
   </body>
