--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
   <div id="container">
 <!------------------------------------------------ CARD 1 ----------------------------------------------------------------->
     <div class="rect">
-      <img src="./assets/loading.gif" />
+      <img src="./assets/dino/roar.jpeg" />
       <div class="innerContent">
         <ion-icon name="arrow-back-circle-outline"></ion-icon>
         <div class="card">
-          <h1>Work in Progress</h1>
+          <h1>Pinosaur Pame</h1>
           <ul>
-            <li>Please be patient, this project is still to come!!!</li>
+            <li>Make the dinosaur jump to avoid the cactus</li>
+            <li>Press the space bar or up arrow or tap the screen to jump</li>
+            <li>Try to get the highest score!</li>
           </ul>
-          <a href="https://youtu.be/8ukYO_iZh4o" target="_blank">Meanwhile, enjoy this!</a>
+          <a href="./dino/dino.html" >Click to ROOOOOOOOOOAAAAARRR</a>
         </div>
       </div>
     </div>
