--- a/skincare/skincare.html
+++ b/skincare/skincare.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <title>PinPare Poutine</title>
     <link rel="stylesheet" href="skincare.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="back">
-      <a href="../index.html">← Back to Pivvy's Pebsite</a>
+        <a href="../index.html">← Back to Pivvy's Pebsite</a>
     </div>
     <div class="container">
-      <div class="face"></div>
-      <div class="products">
-        <div class="product" id="sink"></div>
-        <div class="product" id="towel"></div>
-        <div class="product" id="cleanser"></div>
-        <div class="product" id="toner"></div>
-        <div class="product" id="moisturiser"></div>
-        <div class="product" id="face-mask"></div>
-        <div class="product" id="lip-balm"></div>
-      </div>
+        <div class="face"></div>
+        <div class="products">
+            <div class="product" id="sink" onclick="activateProduct(this)"></div>
+            <div class="product" id="towel" onclick="activateProduct(this)"></div>
+            <div class="product" id="cleanser" onclick="activateProduct(this)"></div>
+            <div class="product" id="toner" onclick="activateProduct(this)"></div>
+            <div class="product" id="moisturiser" onclick="activateProduct(this)"></div>
+            <div class="product" id="face-mask" onclick="activateProduct(this)"></div>
+            <div class="product" id="lip-balm" onclick="activateProduct(this)"></div>
+        </div>
+        <div class="cursor"></div>
     </div>
     <script src="skincare.js"></script>
-  </body>
+</body>
+
 </html>
