--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>click a box to see some cool pivvy projects</p>
   </div>
   <div id="container">
-<!------------------------------------------------ CARD 1 ----------------------------------------------------------------->
+<!------------------------------------------------ PINOSAUR PAME ----------------------------------------------------------------->
     <div class="rect">
       <img src="./assets/dino/roar.jpeg" />
       <div class="innerContent">
@@ -85,21 +85,23 @@
         </div>
       </div>
     </div>
-<!------------------------------------------------ CARD 5 ----------------------------------------------------------------->
+<!------------------------------------------------ PINPARE POUTINE ----------------------------------------------------------------->
     <div class="rect">
-      <img src="./assets/loading.gif" />
+      <img src="./assets/skincare/skincare.webp" />
       <div class="innerContent">
         <ion-icon name="arrow-back-circle-outline"></ion-icon>
         <div class="card">
-          <h1>Work in Progress</h1>
+          <h1>Pinpare Poutine</h1>
           <ul>
-            <li>Please be patient, this project is still to come!!!</li>
+            <li>Make Kyle look so nice and pretty</li>
+            <li>Click the products and apply them to Kyle's face</li>
+            <li>Make sure to apply products in the correct order</li>
           </ul>
-          <a href="https://youtu.be/8ukYO_iZh4o" target="_blank">Meanwhile, enjoy this!</a>
+          <a href="./skincare/skincare.html">Click here to Feel Bonita</a>
         </div>
       </div>
     </div>
-<!------------------------------------------------ CARD 6 ----------------------------------------------------------------->
+<!------------------------------------------------ PART PALLERY ----------------------------------------------------------------->
 <div class="rect">
   <img src="./assets/gallery/gallery.jpeg" />
   <div class="innerContent">
@@ -116,7 +118,7 @@
     </div>
   </div>
 </div>
-<!------------------------------------------------ CARD 7 ----------------------------------------------------------------->
+<!------------------------------------------------ PIVVYS PARDEN ----------------------------------------------------------------->
     <div class="rect">
       <img src="./assets/garden/garden.png" />
       <div class="innerContent">
@@ -132,7 +134,7 @@
         </div>
       </div>
     </div>
-<!------------------------------------------------ CARD 8 ----------------------------------------------------------------->
+<!------------------------------------------------ PIVVY PATCH ----------------------------------------------------------------->
 <div class="rect">
   <img src="./assets/catch/catch.jpeg" />
   <div class="innerContent">
