--- a/skincare/skincare.html
+++ b/skincare/skincare.html
@@ -40,6 +40,15 @@
         ></div>
       </div>
       <div class="cursor"></div>
+      <button class="finish" onclick="checkRoutine()">
+        Finish Skincare Routine
+      </button>
+      <div class="final-score">
+        <h1>Final Score</h1>
+        <p id="score">0%</p>
+        <p id="message">You have not completed your skincare routine in the right order. Restart and try again!</p>
+        <button class="restart" onclick="restart()">Restart</button>
+      </div>
     </div>
     <script src="skincare.js"></script>
   </body>
