--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -158,6 +158,16 @@
           />
         </div>
       </div>
+      <div class="item">
+        <h1>Happy Easter Buns <3</h1>
+        <div class="frame">
+          <img
+            src="../assets/gallery/canvas-12.png"
+            alt="canvas-12"
+            class="canvas"
+          />
+        </div>
+      </div>
       <button id="next">></button>
       <button id="prev"><</button>
     </div>
