--- a/catch/catch.html
+++ b/catch/catch.html
@@ -6,6 +6,20 @@
     <link rel="stylesheet" href="catch.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-97C72DF7RV"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-97C72DF7RV");
+  </script>
   <body>
     <div class="back">
       <a href="../index.html">← Back to Pivvy's Pebsite</a>
