--- a/garden/garden.html
+++ b/garden/garden.html
@@ -6,6 +6,20 @@
     <title>Pivv's Parden</title>
     <link rel="stylesheet" href="garden.css" />
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-97C72DF7RV"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-97C72DF7RV");
+  </script>
   <body>
     <div class="back">
       <a href="../index.html">← Back to Pivvy's Pebsite</a>
