--- a/sheep/sheep.html
+++ b/sheep/sheep.html
@@ -10,6 +10,20 @@
       @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
     </style>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-97C72DF7RV"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-97C72DF7RV");
+  </script>
   <body>
     <div class="back">
       <a href="../index.html">← Back to Pivvy's Pebsite</a>
