--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -181,6 +181,22 @@
           />
         </div>
       </div>
+      <div class="item">
+        <h1>Fi-Six... Sorry</h1>
+        <div class="frame photo">
+          <img
+            src="../assets/gallery/canvas-13.png"
+            alt="canvas-13"
+            class="canvas"
+          />
+          <video src="../assets/gallery/real-8.mp4"
+          alt="real-8"
+          class="real"
+          style="display: none"
+          controls
+          ></video>
+        </div>
+      </div>
       <button id="next">></button>
       <button id="prev"><</button>
     </div>
