Added canvas 14 (Flowers)

--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -189,12 +189,28 @@
             alt="canvas-13"
             class="canvas"
           />
-          <video src="../assets/gallery/real-8.mp4"
-          alt="real-8"
-          class="real"
-          style="display: none"
-          controls
+          <video
+            src="../assets/gallery/real-8.mp4"
+            alt="real-8"
+            class="real"
+            style="display: none"
+            controls
           ></video>
+        </div>
+      </div>
+      <div class="item">
+        <h1>Your Flowers Look Better</h1>
+        <div class="frame photo">
+          <img
+            src="../assets/gallery/canvas-14.jpeg"
+            alt="canvas-14"
+            class="canvas"
+          />
+          <img
+            src="../assets/gallery/nivvy-flowers.jpg"
+            alt="nivvy-flowers"
+            class="real"
+          />
         </div>
       </div>
       <button id="next">></button>
