--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -210,6 +210,7 @@
             src="../assets/gallery/nivvy-flowers.jpg"
             alt="nivvy-flowers"
             class="real"
+            style="display: none"
           />
         </div>
       </div>
