--- a/index.html
+++ b/index.html
@@ -160,6 +160,21 @@
     </div>
   </div>
 </div>
+<!------------------------------------------------ HOON ----------------------------------------------------------------->
+<div class="rect">
+  <img src="./assets/hoon/hoon.jpeg" />
+  <div class="innerContent">
+    <ion-icon name="arrow-back-circle-outline"></ion-icon>
+    <div class="card">
+      <h1>Poon Pracker</h1>
+      <ul>
+        <li>See how long it has been without a hoon</li>
+        <li>Track how much money has been saved</li>
+      </ul>
+      <a href="./hoon/hoon.html">Click to Not Have a Hoon</a>
+    </div>
+  </div>
+</div>
     <script src="script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
