Added comparison to items

--- a/hoon/hoon.html
+++ b/hoon/hoon.html
@@ -27,9 +27,25 @@
     </div>
     <div class="moneySaved">
       <h1>
-        You have saved 
+        You have saved
         <span id="money"></span>!
       </h1>
+      <br />
+      With that you can buy:
+      <br />
+      <span id="mcChicken"></span> Medium McChicken Combos
+      <br />
+      or
+      <br />
+      <span id="powerade"></span> Powerades
+      <br />
+      or
+      <br />
+      <span id="goats"></span> Goats
+      <br />
+      or
+      <br />
+      <span id="raffello"></span> Raffello Chocolates
     </div>
   </body>
   <script src="hoon.js"></script>
