--- a/hoon/hoon.html
+++ b/hoon/hoon.html
@@ -21,6 +21,9 @@
     gtag("config", "G-97C72DF7RV");
   </script>
   <body>
+    <div class="back">
+      <a href="../index.html">← Back to Pivvy's Pebsite</a>
+    </div>
     <div class="timeSince">
       <h1>Days since last hoon:</h1>
       <span id="time"></span>
